Подогнана вёрстка под макет по принципу Pixel Perfect

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                   <div class="hero-list__image">
                     <img src="img/hero/calculator.png" alt="calculator">
                   </div>
-                  <span class="hero-list__text">Рассчитываем смету на работы и материалы в день обращения</span>
+                  <span class="hero-list__text">Рассчитываем смету на работы <br>и материалы в день обращения</span>
                 </li>
                 <li class="hero-list__item">
                   <div class="hero-list__image">
