--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,39 @@
       </section>
       <!-- /.hero -->
 
+      <!-- section.offer>.container>h2.section-title+span.section-subtitle|c -->
+      <section class="offer section">
+        <div class="container">
+          <div class="offer-block">
+            <h2 class="section-title offer__title">
+              Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!
+            </h2>
+            <!-- /.section-title -->
+            <span class="section-subtitle offer__subtitle">
+              Оставьте заявку на разработку бесплатного дизайн-проекта!
+            </span>
+            <!-- /.section-subtitle -->
+            <form action="" class="form offer__form">
+              <input type="text" class="input offer__input" placeholder="Ваше имя">
+              <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+              <button class="button offer__button">Получить бесплатный дизайн-проект</button>
+            </form>
+            <!-- /.form offer__form -->
+            <div class="offer__contacts">
+              <span class="section-text offer__text">
+                Наш менеджер перезвонит Вам в течение 60 секунд
+              </span>
+              <span class="section-text offer__text">
+                или перезвоните нам сами<br><a href="tel:+7(495)42-251-31" class="offer__phone">+7 (495) 42-251-31</a>
+              </span>
+            </div>
+            <!-- /.section-text -->
+          </div>
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.offer -->
+
     </main>
     <!-- /.main -->
 
