--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
               </a>
             </div>
             <!-- /.navbar__contacts -->
-            <button class="button navbar__button">Перезвоните мне</button>
+            <button class="button navbar__button" id="button">Перезвоните мне</button>
           </div>
           <!-- /.navbar__info -->
         </div>
@@ -116,6 +116,17 @@
 
     </main>
     <!-- /.main -->
+
+    <div class="modal" id="modal">
+      <div class="modal-dialog">
+        <button class="modal-dialog__close" id="close">&times;</button>
+        <h4 class="modal-dialog__title">Всплывающее окно</h4>
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
+    <script src="js/main.js"></script>
 
   </body>
 </html>
