--- a/src/index.html
+++ b/src/index.html
@@ -93,11 +93,12 @@
               Оставьте заявку на разработку бесплатного дизайн-проекта!
             </span>
             <!-- /.section-subtitle -->
-            <form action="" class="form offer__form">
-              <input type="text" class="input offer__input" placeholder="Ваше имя">
-              <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+            <form action="#" id="offer-form" class="form offer__form">
+              <input type="text" name="username" class="input offer__input" placeholder="Ваше имя">
+              <input type="tel" name="userphone" class="input offer__input" placeholder="Ваш телефон">
               <button class="button offer__button">Получить бесплатный дизайн-проект</button>
             </form>
+            <div class="success"></div>
             <!-- /.form offer__form -->
             <div class="offer__contacts">
               <span class="section-text offer__text">
@@ -120,7 +121,30 @@
     <div class="modal" id="modal">
       <div class="modal-dialog">
         <button class="modal-dialog__close" id="close">&times;</button>
-        <h4 class="modal-dialog__title">Всплывающее окно</h4>
+        
+        <div class="modal-block">
+          <h2 class="dialog-title modal__title">
+            Узнайте точную стоимость ремонта по телефону!
+          </h2>
+          <!-- /.dialog-title -->
+          <span class="dialog-subtitle modal__subtitle">
+            Заполните поля ниже - мы свяжемся с Вами
+          </span>
+          <!-- /.dialog-subtitle -->
+          <form action="" class="form modal__form">
+            <input type="text" name="username" class="input modal__input" placeholder="Ваше имя">
+            <input type="tel" name="phone" class="input modal__input" placeholder="Ваш телефон">            
+            <button class="button modal__button">Узнать стоимость</button>
+          </form>
+          <!-- /.form modal__form -->
+          <div class="modal__contacts">
+            <span class="section-text modal__text">
+              Или Вы может перезвонить нам сами по телефону:            
+            </span>
+            <a href="tel:+7(495)42-251-31" class="modal__phone">+7 (8182) 42-51-31</a>  
+          </div>        
+        </div>
+
       </div>
       <!-- /.modal-dialog -->
     </div>
@@ -130,6 +154,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"></script>
     <script src="js/modal.js"></script>
+    <script src="js/scripts.js"></script>
 
   </body>
 </html>
