Написан скрипт отправки формы на сервер через Ajax.

--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
           <!-- /.dialog-subtitle -->
           <form action="" class="form modal__form">
             <input type="text" name="username" class="input modal__input" placeholder="Ваше имя">
-            <input type="tel" name="phone" class="input modal__input" placeholder="Ваш телефон">            
+            <input type="tel" name="userphone" class="input modal__input" placeholder="Ваш телефон">            
             <button class="button modal__button">Узнать стоимость</button>
           </form>
           <!-- /.form modal__form -->
