Написан скрипт отправки формы на сервер через Ajax.

--- a/src/index.html
+++ b/src/index.html
@@ -127,9 +127,9 @@
             Узнайте точную стоимость ремонта по телефону!
           </h2>
           <!-- /.dialog-title -->
-          <span class="dialog-subtitle modal__subtitle">
+          <div class="dialog-subtitle modal__subtitle">
             Заполните поля ниже - мы свяжемся с Вами
-          </span>
+          </div>
           <!-- /.dialog-subtitle -->
           <form action="" class="form modal__form">
             <input type="text" name="username" class="input modal__input" placeholder="Ваше имя">
@@ -139,7 +139,7 @@
           <!-- /.form modal__form -->
           <div class="modal__contacts">
             <span class="section-text modal__text">
-              Или Вы может перезвонить нам сами по телефону:            
+              Или Вы может перезвонить нам сами<br> по телефону:            
             </span>
             <a href="tel:+7(495)42-251-31" class="modal__phone">+7 (8182) 42-51-31</a>  
           </div>        
