--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ремонт квартир</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/style.css">    
   </head>
   <body>
     <!-- nav.navbar>.container>.navbar-block>.navbar__logo+.navbar__info|c -->
@@ -110,9 +111,46 @@
             </div>
             <!-- /.section-text -->
           </div>
+          <!-- /.offer-block -->
         </div>
         <!-- /.container -->
       </section>
+
+      <section class="section portfolio">
+        <div class="container">
+          <h2 class="section-title portfolio__title">Работая с 2007 года, мы сделали более 500 ремонтов в квартирах и домах</h2>
+
+          <!-- .slider>.slider__item*6>img[src="img/portfolio/slider-$.jpg"]|c -->
+
+          <div class="slider">
+            <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+            <!-- /.slider__item -->
+            <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+            <!-- /.slider__item -->
+            <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+            <!-- /.slider__item -->
+            <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+            <!-- /.slider__item -->
+            <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+            <!-- /.slider__item -->
+            <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+            <!-- /.slider__item -->
+          </div>
+          <div class="arrows portfolio__arrows">
+            <div class="arrows__left">
+                <img src="img/portfolio/left-arrow.png" alt="">
+            </div>
+            <div class="arrows__right">
+              <img src="img/portfolio/right-arrow.png" alt="">
+            </div>
+          </div>
+          <!-- /.slider -->
+          
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section portfolio -->
+
       <!-- /.offer -->
 
     </main>
@@ -155,6 +193,33 @@
       crossorigin="anonymous"></script>
     <script src="js/modal.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        $('.slider').slick({
+          slidesToShow: 3,
+          slidesToScroll: 1,
+          prevArrow: $('.arrows__left'),
+          nextArrow: $('.arrows__right'),
+          responsive: [
+            {
+              breakpoint: 1200,
+              settings: {
+                slidesToShow: 2,
+                slidesToScroll: 1,                
+              }
+            },
+            {
+              breakpoint: 768,
+              settings: {
+                slidesToShow: 1,
+                slidesToScroll: 1
+              }
+            }            
+          ]
+        });
+      });
+    </script>
 
   </body>
 </html>
