--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,98 @@
       </section>
       <!-- /.section portfolio -->
 
+      <!-- section.section.price>.container>h2.section-title.price__title+span.section-subtitle.price__subtitle|c -->
+
+      <section class="section price">
+        <div class="container">
+          <h2 class="section-title price__title">У нас очень гибкая система скидок на комплексные работы!</h2>
+          <!-- /.section-title price__title -->
+          <span class="section-subtitle price__subtitle">Прайс на наши услуги</span>
+          <!-- /.section-subtitle price__subtitle -->
+          
+          <!-- .cards>.card*6>(.card__image>img[src="img/price/"])+(.card__text>h4.card__title+a.card__link{Узнать цены}[href="#"])|c -->
+
+          <div class="cards">
+            <div class="card price__card">
+              <div class="card__image"><img class="card__img" src="img/price/bathroom.png" alt=""></div>
+              <!-- /.card__image -->
+              <div class="card__text">
+                <h4 class="card__title">Ремонт ванных комнат и с/у</h4>
+                <!-- /.card__title -->
+                <a href="#" class="card__link">Узнать цены</a>
+                <!-- /.card__link -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+            <div class="card price__card">
+              <div class="card__image"><img class="card__img" src="img/price/living.png" alt=""></div>
+              <!-- /.card__image -->
+              <div class="card__text">
+                <h4 class="card__title">Ремонт комнат и квартир</h4>
+                <!-- /.card__title -->
+                <a href="#" class="card__link">Узнать цены</a>
+                <!-- /.card__link -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+            <div class="card price__card">
+              <div class="card__image"><img class="card__img" src="img/price/office.png" alt=""></div>
+              <!-- /.card__image -->
+              <div class="card__text">
+                <h4 class="card__title">Отделка офисных помещений</h4>
+                <!-- /.card__title -->
+                <a href="#" class="card__link">Узнать цены</a>
+                <!-- /.card__link -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+            <div class="card price__card">
+              <div class="card__image"><img class="card__img" src="img/price/buildings.png" alt=""></div>
+              <!-- /.card__image -->
+              <div class="card__text">
+                <h4 class="card__title">Ремонт в новостройках</h4>
+                <!-- /.card__title -->
+                <a href="#" class="card__link">Узнать цены</a>
+                <!-- /.card__link -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+            <div class="card price__card">
+              <div class="card__image"><img class="card__img" src="img/price/kitchen.png" alt=""></div>
+              <!-- /.card__image -->
+              <div class="card__text">
+                <h4 class="card__title">Ремонт кухонь</h4>
+                <!-- /.card__title -->
+                <a href="#" class="card__link">Узнать цены</a>
+                <!-- /.card__link -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+            <div class="card price__card">
+              <div class="card__image"><img class="card__img" src="img/price/houses.png" alt=""></div>
+              <!-- /.card__image -->
+              <div class="card__text">
+                <h4 class="card__title">Ремонт дач и коттеджей</h4>
+                <!-- /.card__title -->
+                <a href="#" class="card__link">Узнать цены</a>
+                <!-- /.card__link -->
+              </div>
+              <!-- /.card__text -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.cards -->
+
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section price -->
+
       <!-- /.offer -->
 
     </main>
