--- a/src/index.html
+++ b/src/index.html
@@ -244,6 +244,66 @@
       </section>
       <!-- /.section price -->
 
+      <!-- section.section.steps>.container>h2.section-title.steps__title+span.section-subtitle.steps__subtitle|c -->
+
+      <section class="section steps">
+        <div class="container">
+          <h2 class="section-title steps__title">Наши специалисты готовы выехать на замер в любое удобное для Вас время</h2>
+          <!-- /.section-title steps__title -->
+          <span class="section-subtitle steps__subtitle">5 шагов до ремонта</span>
+          <!-- /.section-subtitle steps__subtitle -->
+
+          <!-- .steps-block>.step*5>.step__image+p.step__text|c -->
+
+          <div class="steps-block">
+            <div class="step">
+              <div class="step__image">
+                <img src="img/steps/woman-with-headset.png" alt="">
+              </div>
+              <!-- /.step__image -->
+              <p class="step__text">Вы звоните нам или оставляете заявку</p>
+              <!-- /.step__text -->
+            </div>
+            <div class="step">
+              <div class="step__image">
+                <img src="img/steps/wall-clock.png" alt="">
+              </div>
+              <!-- /.step__image -->
+              <p class="step__text">Согласуем удобное для Вас время выезда специалиста на замер</p>
+              <!-- /.step__text -->
+            </div>
+            <div class="step">
+              <div class="step__image">
+                <img src="img/steps/money.png" alt="">
+              </div>
+              <!-- /.step__image -->
+              <p class="step__text">Рассчитываем смету и согласовываем с Вами</p>
+              <!-- /.step__text -->
+            </div>
+            <div class="step">
+              <div class="step__image">
+                <img src="img/steps/folded-document-icon.png" alt="">
+              </div>
+              <!-- /.step__image -->
+              <p class="step__text">Подписываем договор и закупаем материал по оптовым ценам</p>
+              <!-- /.step__text -->
+            </div>
+            <div class="step">
+              <div class="step__image">
+                <img src="img/steps/calendar.png" alt="">
+              </div>
+              <!-- /.step__image -->
+              <p class="step__text">Выполняем ремонт в указанные сроки</p>
+              <!-- /.step__text -->
+            </div>
+          </div>
+          <!-- /.steps-block -->          
+
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section steps -->
+
       <!-- /.offer -->
 
     </main>
