--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
               </a>
             </div>
             <!-- /.navbar__contacts -->
-            <button class="button navbar__button hvr-glow" id="button">Перезвоните мне</button>
+            <button class="button navbar__button hvr-glow" onclick="ym(55214386, 'reachGoal', 'button'); return true;" id="button">Перезвоните мне</button>
           </div>
           <!-- /.navbar__info -->
         </div>
