--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             </div>
             <!-- /.hero-text -->            
             <div class="hero-image">
-              <img src="img/hero/hero-image.png" alt="План квартиры">
+              <img src="img/hero/hero-image.jpg" alt="План квартиры">
             </div>
             <!-- /.hero-image -->
           </div>
@@ -163,7 +163,7 @@
 
           <div class="cards">
             <div class="card price__card wow fadeInUp">
-              <div class="card__image"><img class="card__img" src="img/price/bathroom.png" alt=""></div>
+              <div class="card__image"><img class="card__img" src="img/price/bathroom.jpg" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт ванных комнат и с/у</h4>
@@ -175,7 +175,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeInUp" data-wow-delay="0.1s">
-              <div class="card__image"><img class="card__img" src="img/price/living.png" alt=""></div>
+              <div class="card__image"><img class="card__img" src="img/price/living.jpg" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт комнат и квартир</h4>
@@ -187,7 +187,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeInUp" data-wow-delay="0.2s">
-              <div class="card__image"><img class="card__img" src="img/price/office.png" alt=""></div>
+              <div class="card__image"><img class="card__img" src="img/price/office.jpg" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Отделка офисных помещений</h4>
@@ -199,7 +199,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeInUp" data-wow-delay="0.3s">
-              <div class="card__image"><img class="card__img" src="img/price/buildings.png" alt=""></div>
+              <div class="card__image"><img class="card__img" src="img/price/buildings.jpg" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт в новостройках</h4>
@@ -211,7 +211,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeInUp" data-wow-delay="0.4s">
-              <div class="card__image"><img class="card__img" src="img/price/kitchen.png" alt=""></div>
+              <div class="card__image"><img class="card__img" src="img/price/kitchen.jpg" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт кухонь</h4>
@@ -223,7 +223,7 @@
             </div>
             <!-- /.card -->
             <div class="card price__card wow fadeInUp" data-wow-delay="0.5s">
-              <div class="card__image"><img class="card__img" src="img/price/houses.png" alt=""></div>
+              <div class="card__image"><img class="card__img" src="img/price/houses.jpg" alt=""></div>
               <!-- /.card__image -->
               <div class="card__text">
                 <h4 class="card__title">Ремонт дач и коттеджей</h4>
