--- a/src/index.html
+++ b/src/index.html
@@ -364,7 +364,7 @@
 
     <footer class="footer">
       <div class="map" id="map">
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4a050975e2d54a039f8b2abe6a2365c05379965ab28f636a0c16e4cb46df1101&amp;width=100%25&amp;height=640&amp;lang=ru_RU&amp;scroll=false"></script>
+        <script charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4a050975e2d54a039f8b2abe6a2365c05379965ab28f636a0c16e4cb46df1101&amp;width=100%25&amp;height=640&amp;lang=ru_RU&amp;scroll=false"></script>
       </div>
       <div class="container">
         <div class="contacts-block">
