--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                   <div class="hero-list__image">
                     <img src="img/hero/calculator.png" alt="calculator">
                   </div>
-                  <span class="hero-list__text wow fadeInUp" data-wow-delay="2.5s">Рассчитываем смету на работы <br>и материалы в день обращения</span>
+                  <span class="hero-list__text wow fadeInUp" data-wow-delay="2.5s">Рассчитываем смету на работы<br> и материалы в день обращения</span>
                 </li>
                 <li class="hero-list__item">
                   <div class="hero-list__image">
@@ -89,7 +89,7 @@
         <div class="container">
           <div class="offer-block">
             <h2 class="section-title offer__title">
-              Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!
+              Мы бесплатно разработаем<br> дизайн-проект Вашего жилья<br> и реализуем его!
             </h2>
             <!-- /.section-title -->
             <span class="section-subtitle offer__subtitle">
@@ -107,7 +107,7 @@
               <span class="section-text offer__text">
                 Наш менеджер перезвонит Вам в течение 60 секунд
               </span>
-              <span class="section-text offer__text">
+              <span class="section-text offer__text__phone">
                 или перезвоните нам сами<br><a href="tel:+7(495)42-251-31" class="offer__phone hvr-underline-reveal">+7 (495) 42-251-31</a>
               </span>
             </div>
@@ -120,7 +120,7 @@
 
       <section class="section portfolio">
         <div class="container">
-          <h2 class="section-title portfolio__title">Работая с 2007 года, мы сделали более 500 ремонтов в квартирах и домах</h2>
+          <h2 class="section-title portfolio__title">Работая с 2007 года,<br> мы сделали более 500 ремонтов в квартирах и домах</h2>
 
           <!-- .slider>.slider__item*6>img[src="img/portfolio/slider-$.jpg"]|c -->
 
@@ -157,7 +157,7 @@
 
       <section class="section price">
         <div class="container">
-          <h2 class="section-title price__title">У нас очень гибкая система скидок на комплексные работы!</h2>
+          <h2 class="section-title price__title">У нас очень гибкая система скидок<br> на комплексные работы!</h2>
           <!-- /.section-title price__title -->
           <span class="section-subtitle price__subtitle">Прайс на наши услуги</span>
           <!-- /.section-subtitle price__subtitle -->
@@ -249,7 +249,7 @@
 
       <section class="section steps">
         <div class="container">
-          <h2 class="section-title steps__title">Наши специалисты готовы выехать на замер в любое удобное для Вас время</h2>
+          <h2 class="section-title steps__title">Наши специалисты готовы выехать на замер<br> в любое удобное для Вас время</h2>
           <!-- /.section-title steps__title -->
           <span class="section-subtitle steps__subtitle">5 шагов до ремонта</span>
           <!-- /.section-subtitle steps__subtitle -->
@@ -319,16 +319,16 @@
 
               <ul class="interview-list">
                 <li class="interview-list__item">
-                  <span class="interview-list__counter">1</span>
+                  <span class="interview-list__counter">1.</span>
                   <span class="interview-list__text">Какова площадь помещения?</span></li>
                 <li class="interview-list__item">
-                  <span class="interview-list__counter">2</span>
+                  <span class="interview-list__counter">2.</span>
                   <span class="interview-list__text">У Вас новостройка или вторичное жильё?</span></li>
                 <li class="interview-list__item">
-                  <span class="interview-list__counter">3</span>
+                  <span class="interview-list__counter">3.</span>
                   <span class="interview-list__text">Где находится помещение, в котором будет производиться ремонт?</span></li>
                 <li class="interview-list__item">
-                  <span class="interview-list__counter">4</span>
+                  <span class="interview-list__counter">4.</span>
                   <span class="interview-list__text">Назначение помещения?</span></li>
               </ul>
 
@@ -369,7 +369,7 @@
       <div class="container">
         <div class="contacts-block">
           <div class="contacts">
-            <h3 class="contacts__title">Приезжайте к нам в гости! Проконсультируем Вас по всем вопросам ремонта</h3>
+            <h3 class="contacts__title">Приезжайте к нам в гости! Проконсультируем Вас<br> по всем вопросам ремонта</h3>
 
             <!-- ul.contacts-list>li.contacts-list__item*3>span.contacts-list__icon+span.contacts-list__text -->
 
@@ -423,7 +423,7 @@
           <!-- /.form modal__form -->
           <div class="modal__contacts">
             <span class="section-text modal__text">
-              Или Вы может перезвонить нам сами<br> по телефону:            
+              Или Вы может перезвонить нам сами по телефону:            
             </span>
             <a href="tel:+7(495)42-251-31" class="modal__phone">+7 (8182) 42-51-31</a>  
           </div>        
